force-app/main/default/objects/Speaker__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Company of speaker</description>
    <inlineHelpText>Company of speaker</inlineHelpText>
    <label>Company</label>
    <length>40</length>
    <type>Text</type>
</CustomField>