force-app/main/default/objects/Speaker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Address of Speaker</description>
    <inlineHelpText>Email Address of Speaker</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>