force-app/main/default/objects/Speaker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of Speaker</description>
    <inlineHelpText>Phone number of Speaker</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>